# gymhero

./: .coveragerc  .dockerignore  .env.dev  .env.example  .env.local  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.old  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: run-tests.yaml
docker/: Dockerfile  init.sql
docker/dev/: Dockerfile
docker/test/: Dockerfile  initdb.sh
gymhero/: config.py  exceptions.py  log.py  main.py  security.py  server.py
gymhero/api/: __init__.py  dependencies.py  exercise.py  utils.py
gymhero/crud/: __init__.py  base.py  body_part.py  bodypart.py  exercise.py  exercise_type.py  level.py  training_plan.py  training_unit.py  user.py
gymhero/database/: __init__.py  base_class.py  db.py  session.py  utils.py
gymhero/models/: __init__.py  body_part.py  exercise.py  level.py  training_plan.py  training_unit.py  user.py  workout.py
gymhero/schemas/: __init__.py  auth.py  body_part.py  bodypart.py  exercise.py  exercise_type.py  level.py  training_plan.py  training_unit.py  user.py
migrations/: env.py
migrations/versions/: 16510d730be7_.py  1d4ab6cbeb51_refactored_model_solved_issues.py  1ee564d3b257_initial_revision.py  2a0e92747c9c_training_unit_plan.py  66af1137c963_rebuilt_model_2023_12_07_10_37_32.py  9e93e0e69b93_recreate_revision.py  a89cffb43d42_.py  c64568c0f916_make_names_unique_true.py  (+1 more)
resources/: exercises.csv
scripts/: create_superuser.py  initdb.py  initsu.py  seed_database.py  utils.py
tests/: __init__.py  conftest.py
(+39 files in other folders)
